--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "nef-fs": "^1.0.0"
   },
   "optionalDependencies": {
-    "cloud-env": "0.2.2",
-    "node-static": "0.7.10"
+    "cloud-env": "^0.2.2",
+    "node-static": "^0.7.10"
   },
   "nonDefaultDependencies": {
-    "nodemailer": "4.0.1",
-    "ofe": "0.5.1"
+    "nodemailer": "^4.0.1",
+    "ofe": "^0.5.1"
   },
   "engines": {
     "node": "8.7.0"
